Ensure the bootstrap toggle handle is visible

--- a/styles/pijuwebui.sass
+++ b/styles/pijuwebui.sass
@@ -48,3 +48,8 @@ button.undecorated
 a.fontawesomelink, a.fontawesomelink:hover, a.fontawesomelink:visited, a.fontawesomelink:active
     color: inherit
     text-decoration: none
+
+
+// Bootstrap Toggle missing styling
+.toggle-handle, .toggle-handle:hover
+    background-color: white
